资源上传下载ok

--- a/account/templates/account/teacher-signup.html
+++ b/account/templates/account/teacher-signup.html
@@ -3,7 +3,7 @@
     {% include 'nav.html' %}
 {% endblock %}
 {% block signup %}
-    <div style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
+    <div class="row" style="width: 400px;margin-left: auto;margin-right: auto;margin-top: 5%;margin-bottom: 20%;margin-top: 10%">
 
         <form role="form" method="post" action="" style="margin-left: 5%;margin-right: 5%">
             {% if messages %}
