--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3253,6 +3253,7 @@ tbody.collapse.in {
 }
 .btn-group,
 .btn-group-vertical {
+    margin: 2px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
