--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -13,7 +13,7 @@
         {% csrf_token %}
         <p><input type="text" class="form-control" placeholder="用户名" name="username"></p>
         <p><input type="password" class="form-control" placeholder="密码" name="password"></p>
-        <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>
+{#        <label id="lable"><input type="checkbox" value="remember-me"> Remember me</label>#}
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     </form>
 </div>
