--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,7 +4,8 @@
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
     <div class="container">
-        <div class="col-md-8 col-sm-8 col-sm-8">
+        <div class="row">
+            <div class="col-md-8 col-sm-8 col-sm-8">
             {% if messages %}
                 {% for message in messages %}
                     <p class="alert alert-danger">{{ message }}</p>
@@ -40,6 +41,7 @@
                 </div>
             </div>
 
+        </div>
         </div>
     </div>
 {% endblock %}
