--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -4,7 +4,8 @@
 {% block nav %}{% include 'navbar.html' %}{% endblock %}
 {% block main %}
     <div class="container">
-        <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-8">
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-danger">{{ message }}</div>
@@ -61,6 +62,7 @@
                 </div>
             </div>
 
+        </div>
         </div>
     </div>
 {% endblock %}
