--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block main %}
     <div class="container" style="margin-top: 20px">
-        <div class="col-md-8">
+        <div class="col-md-9">
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-success">{{ message }}</div>
@@ -96,9 +96,18 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div style="text-align: center">
-                <img src="../static/images/qrcode.jpg" class="img-thumbnail">
+        <div class="col-md-3">
+            <div>
+                <div class="panel panel-default">
+                    <div class="panel-heading" style="background-color: #C6E5E9">
+                        Android和iOS端正在开发中...
+                    </div>
+                    <div class="panel-body" style="text-align: center">
+                    <img src="../static/images/qrcode.jpg" class="img-thumbnail"style="margin-bottom: 20px">
+                </div>
+                </div>
+
+
             </div>
         </div>
     </div>
