--- a/news/templates/news/add.html
+++ b/news/templates/news/add.html
@@ -21,7 +21,7 @@
                             {% csrf_token %}
                             <p><input type="text" placeholder="标题" class="form-control" name="title"></p>
 
-                            <p><input type="url" placeholder="url地址" class="form-control" name="url"></p>
+                            <p><input type="url" placeholder="网址" class="form-control" name="url"></p>
 
                             <p class="pull-right">
                                 <a href="{% url 'news_index' dn %}" class="btn btn-warning">返回</a>
