--- a/assignment/templates/assignment/index.html
+++ b/assignment/templates/assignment/index.html
@@ -40,7 +40,11 @@
 
                         <p>选择的课程：数据结构</p>
 
-                        <p>教师推荐网络课程，学习建议路线</p>
+                        <p>年级：2012级</p>
+
+                        <p>专业：计算机</p>
+
+                        <p>教师：殷东亮</p>
                     </div>
                     <div class="list-group-item" style="text-align: center">
                         <a href="{% url 'issue' %}" class="btn"
