--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                             </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/cs/">计算机网络</a></li>
-                                <li><a href="/gz/">光照</a></li>
+                                <li class="disabled"><a href="/gz/">光照</a></li>
                                 <li><a href="/tx/">通信</a></li>
                                 <li><a href="/au/">自动化</a></li>
                                 <li><a href="/xj/">信计</a></li>
