--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -51,7 +51,7 @@
                                     </a>
 
                                     <div class="col-sm-9 col-xs-9 col-md-10" style="margin-left: 5px;margin-top: 10px">
-                                        <div style="max-height: 800px">
+                                        <div style="max-height: 800px;overflow-y: auto">
                                             {{ r.content | safe }}
                                         </div>
                                         <div style="margin-top: 30px">
