--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -100,7 +100,7 @@ hr {
           box-sizing: content-box;
 }
 pre {
-    max-height: 600px;
+    max-height: 400px;
   overflow-y: auto;
 }
 code,
@@ -1372,7 +1372,7 @@ pre {
   padding: 9.5px;
   margin: 0 0 10px;
   font-size: 13px;
-  line-height: 1.42857143;
+  line-height: 1.1;
   color: #333;
   word-break: break-all;
   word-wrap: break-word;
