--- a/forum/templates/forum/topic.html
+++ b/forum/templates/forum/topic.html
@@ -101,7 +101,7 @@
 
         var editor = new Simditor({
             textarea: $('#editor'),
-            toolbar: ['title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image', '|'],
+            toolbar: ['emoji','title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image', '|'],
             emoji: {
                 imagePath: '/static/images/emoji/'
             },
