--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default navbar-fixed-top" role="banner" style="background-color: #ffffff">
+<header class="navbar navbar-default navbar-fixed-top" role="banner" style="background-color: #98e9f2;">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse"
@@ -8,12 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{% url 'index' %}" style="font-size: 20;color: #5bc0de" class="navbar-brand" ><span>Dlpu</span><span style="color: #D73C31">C</span>sdn</a>
+{#            <a href="{% url 'index' %}" style="font-size: 20;color: #5bc0de" class="navbar-brand" ><span>Dlpu</span><span style="color: #D73C31">C</span>sdn</a>#}
+            <a href="{% url 'index' %}" style="font-size: 20;color: #ffffff" class="navbar-brand" ><span>Dlpu</span><span style="color: #D73C31">C</span>sdn</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" id="top" role="navigation">
             <ul class="nav navbar-nav">
-                <li class=""><a href="{% url 'assignment_index' %}">作业</a></li>
-                <li class=""><a href="{% url 'src_index' %}">资源</a></li>
+                <li class=""><a href="{% url 'assignment_index' %}" style="color: #ffffff">作业</a></li>
+                <li class=""><a href="{% url 'src_index' %}" style="color: #ffffff">资源</a></li>
 {#                <li class=""><a href="">发现</a></li>#}
 
             </ul>
