--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -13,7 +13,7 @@
             {% endif %}
             <div class="panel panel-default ">
 
-                <div class="panel-heading" style="background-color: #98e9f2">
+                <div class="panel-heading" style="background-color: #C6E5E9">
                     <span style="font-size: 18px">主题</span>
                     <a href="{% url 'create_topic' dn %}" class="btn btn-sm pull-right"
                        style="margin-top: -2px;background-color: #D73C31;color: #ffffff">新话题</a>
