--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/simditor.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/simditor-emoji.css"/>
+    <link type="text/css" rel="stylesheet" href="/static/css/default.css">
     <script type="text/javascript" src="/static/js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.js"></script>
     <script type="text/javascript" src="/static/js/module.js"></script>
     <script type="text/javascript" src="/static/js/uploader.js"></script>
     <script type="text/javascript" src="/static/js/simditor.js"></script>
     <script type="text/javascript" src="/static/js/simditor-emoji.js"></script>
+    <script type="text/javascript" src="/static/js/highlight.pack.js"></script>
 
     <style>
         [touch-action="none"] {
