--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="panel panel-default">
-                <div class="panel-heading" style="background-color: #98e9f2">
+                <div class="panel-heading" style="background-color: #C6E5E9">
                     前往&nbsp;-->&nbsp;社区
                 </div>
                 <div class="list-group">
@@ -99,7 +99,7 @@
         <div class="col-md-3">
             <div>
                 <div class="panel panel-default">
-                    <div class="panel-heading" style="background-color: #98e9f2">
+                    <div class="panel-heading" style="background-color: #C6E5E9">
                         Android和iOS端正在开发中...
                     </div>
                     <div class="panel-body" style="text-align: center">
