--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -36,7 +36,12 @@
     </div>
     <script>
         var editor = new Simditor({
-            textarea: $('#editor')
-        });
+            textarea: $('#editor'),
+            toolbar: ['emoji', '|','title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image'],
+            emoji: {
+                imagePath: '/static/images/emoji/'
+            },
+            defaultImage: '/static/images/loading-upload.gif'
+        });        
     </script>
 {% endblock %}
